--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ footer{
 
 .debug main{
     height: calc( 100vh - 50px);
+    background-color: black;
 }
 
 .debug footer nav{
@@ -86,13 +87,18 @@ footer{
     color: lime;
 }
 
+#par-num{
+    position: absolute;
+    top: 0;
+    right: 40px;
+}
 
 .debug footer .nav-left{
-    width: 18%;  
+    width: 16%;  
 }
 
 .debug footer .nav-midle{
-    width: 65%;
+    width: 60%;
 }
 .debug footer .nav-right{
     width: 10%;
@@ -102,7 +108,7 @@ footer{
 .debug footer .nav-right .layover{
     width: 100%;
     height: 100%;
-    background-color: gray;
+    background-color: rgba(92, 91, 91, 0.7);
     color: red;
     justify-content: center;
     align-items: center;
